// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageTransformation in nodeBuilder should convert nodes one level deep 1`] = `
Object {
  "backdrop_path": Object {
    "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
    "source": "/backdrop_image.png",
    "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
    "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
    "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
  },
  "id": 1,
  "logo_path": Object {
    "original": "https://image.tmdb.org/t/p/original/logo_image.png",
    "source": "/logo_image.png",
    "w154": "https://image.tmdb.org/t/p/w154/logo_image.png",
    "w185": "https://image.tmdb.org/t/p/w185/logo_image.png",
    "w300": "https://image.tmdb.org/t/p/w300/logo_image.png",
    "w45": "https://image.tmdb.org/t/p/w45/logo_image.png",
    "w500": "https://image.tmdb.org/t/p/w500/logo_image.png",
    "w92": "https://image.tmdb.org/t/p/w92/logo_image.png",
  },
  "poster_path": Object {
    "original": "https://image.tmdb.org/t/p/original/poster_image.png",
    "source": "/poster_image.png",
    "w154": "https://image.tmdb.org/t/p/w154/poster_image.png",
    "w185": "https://image.tmdb.org/t/p/w185/poster_image.png",
    "w342": "https://image.tmdb.org/t/p/w342/poster_image.png",
    "w500": "https://image.tmdb.org/t/p/w500/poster_image.png",
    "w780": "https://image.tmdb.org/t/p/w780/poster_image.png",
    "w92": "https://image.tmdb.org/t/p/w92/poster_image.png",
  },
  "profile_path": Object {
    "h632": "https://image.tmdb.org/t/p/h632/profile_image.png",
    "original": "https://image.tmdb.org/t/p/original/profile_image.png",
    "source": "/profile_image.png",
    "w185": "https://image.tmdb.org/t/p/w185/profile_image.png",
    "w45": "https://image.tmdb.org/t/p/w45/profile_image.png",
  },
  "still_path": Object {
    "original": "https://image.tmdb.org/t/p/original/still_image.png",
    "source": "/still_image.png",
    "w185": "https://image.tmdb.org/t/p/w185/still_image.png",
    "w300": "https://image.tmdb.org/t/p/w300/still_image.png",
    "w92": "https://image.tmdb.org/t/p/w92/still_image.png",
  },
  "title": "one-level",
}
`;

exports[`imageTransformation in nodeBuilder should convert nodes two levels deep 1`] = `
Object {
  "id": 3,
  "items": Array [
    Object {
      "backdrop_path": Object {
        "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
        "source": "/backdrop_image.png",
        "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
        "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
        "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
      },
      "logo_path": Object {
        "original": "https://image.tmdb.org/t/p/original/logo_image.png",
        "source": "/logo_image.png",
        "w154": "https://image.tmdb.org/t/p/w154/logo_image.png",
        "w185": "https://image.tmdb.org/t/p/w185/logo_image.png",
        "w300": "https://image.tmdb.org/t/p/w300/logo_image.png",
        "w45": "https://image.tmdb.org/t/p/w45/logo_image.png",
        "w500": "https://image.tmdb.org/t/p/w500/logo_image.png",
        "w92": "https://image.tmdb.org/t/p/w92/logo_image.png",
      },
    },
    Object {
      "poster_path": Object {
        "original": "https://image.tmdb.org/t/p/original/poster_image.png",
        "source": "/poster_image.png",
        "w154": "https://image.tmdb.org/t/p/w154/poster_image.png",
        "w185": "https://image.tmdb.org/t/p/w185/poster_image.png",
        "w342": "https://image.tmdb.org/t/p/w342/poster_image.png",
        "w500": "https://image.tmdb.org/t/p/w500/poster_image.png",
        "w780": "https://image.tmdb.org/t/p/w780/poster_image.png",
        "w92": "https://image.tmdb.org/t/p/w92/poster_image.png",
      },
      "profile_path": Object {
        "h632": "https://image.tmdb.org/t/p/h632/profile_image.png",
        "original": "https://image.tmdb.org/t/p/original/profile_image.png",
        "source": "/profile_image.png",
        "w185": "https://image.tmdb.org/t/p/w185/profile_image.png",
        "w45": "https://image.tmdb.org/t/p/w45/profile_image.png",
      },
      "still_path": Object {
        "original": "https://image.tmdb.org/t/p/original/still_image.png",
        "source": "/still_image.png",
        "w185": "https://image.tmdb.org/t/p/w185/still_image.png",
        "w300": "https://image.tmdb.org/t/p/w300/still_image.png",
        "w92": "https://image.tmdb.org/t/p/w92/still_image.png",
      },
    },
  ],
  "title": "two-level",
}
`;

exports[`imageTransformation in nodeBuilder with downloadImages set in endpoint should convert nodes one level deep 1`] = `
Object {
  "backdrop_path": Object {
    "localFile": "local-file-node-id",
    "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
    "source": "/backdrop_image.png",
    "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
    "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
    "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
  },
  "id": 2,
  "title": "img-one-level",
}
`;

exports[`imageTransformation in nodeBuilder with downloadImages set in endpoint should convert nodes two levels deep 1`] = `
Object {
  "id": 4,
  "items": Array [
    Object {
      "backdrop_path": Object {
        "localFile": "local-file-node-id",
        "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
        "source": "/backdrop_image.png",
        "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
        "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
        "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
      },
    },
  ],
  "title": "img-two-level",
}
`;

exports[`imageTransformation in nodeBuilder with downloadImages set in pluginOptions should convert nodes one level deep 1`] = `
Object {
  "backdrop_path": Object {
    "localFile": "local-file-node-id",
    "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
    "source": "/backdrop_image.png",
    "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
    "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
    "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
  },
  "id": 2,
  "title": "img-options-one-level",
}
`;

exports[`imageTransformation in nodeBuilder with downloadImages set in pluginOptions should convert nodes two levels deep 1`] = `
Object {
  "id": 4,
  "items": Array [
    Object {
      "backdrop_path": Object {
        "localFile": "local-file-node-id",
        "original": "https://image.tmdb.org/t/p/original/backdrop_image.png",
        "source": "/backdrop_image.png",
        "w1280": "https://image.tmdb.org/t/p/w1280/backdrop_image.png",
        "w300": "https://image.tmdb.org/t/p/w300/backdrop_image.png",
        "w780": "https://image.tmdb.org/t/p/w780/backdrop_image.png",
      },
    },
  ],
  "title": "img-options-two-level",
}
`;
